# jack_capture

./: ChangeLog  Makefile  Makefile.am  README  config  configure.ac  gen_das_config_h.sh  gen_setformat_c.sh  jack_capture.c  jack_capture.h  jack_capture_gui  jack_capture_gui2.cpp  make_and_run_debug.sh  osc.c  sema.h  setformat.c  setformat.h  testsndfile.c  upwaker.c  upwaker.h  vringbuffer.c  vringbuffer.h
